remove depedency lock file

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ override.tf.json
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
 *tfplan*
+
+# Terraform Dependency Lock file
+.terraform.lock.hcl
